--- a/compose.yml
+++ b/compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
     nebula-bot:
         build: . # This tells compose to build using the Dockerfile
@@ -12,9 +11,9 @@ services:
         tty: false # ← Disable TTY (no pseudo-terminal)
         stdin_open: false # ← Disable unused stdin
         logging:
-            driver: 'json-file' # ← Default, but ensures no duplication
+            driver: "json-file" # ← Default, but ensures no duplication
             options:
-                max-size: '10m'
+                max-size: "10m"
                 mode: non-blocking # ← Prevents log buffering issues
         networks:
             - nebula-network
@@ -23,7 +22,7 @@ services:
         image: nginx:alpine
         container_name: nebula-nginx
         ports:
-            - '80:80'
+            - "80:80"
         volumes:
             - ./nginx.conf:/etc/nginx/nginx.conf
         restart: unless-stopped
